--- a/gambar/css/style.css
+++ b/gambar/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-image: url('/gambar/img/Mountain\ Retreat\ [3840x2160].png');
+	background-image: url('/gambar/img/Mountain.png');
 	background-repeat: no-repeat;
   	background-size: cover;
   	background-attachment: fixed;
