--- a/weeb2/assets/slide CSS JS/slide.css
+++ b/weeb2/assets/slide CSS JS/slide.css
@@ -14,13 +14,15 @@
  
   .mygalery {
     background-color: aqua;
-    padding: 14px 18px;
+    padding: 16px 22px;
     border-radius: 2em;
     color: #000000;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
- 
+  .mygalery:hover{
+    background-color: #fff;
+  }
   .klik {
     text-align: center;
     margin-bottom: 2%;
@@ -39,9 +41,9 @@
     .mygalery {
       background-color: aqua;
       padding: 10px 15px;
-      border-radius: 2em;
+      border-radius: 1rem;
       color: #000000;
-      font-size: 0.9rem;
+      font-size: 1.2rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
  
